--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html {
 html, body {
     margin: 0;
     padding: 0;
-    font-family: Helvetica Neue, Helvetica, Arial;
+    font-family: monospace, Helvetica Neue, Helvetica, Arial;
     color: #ffffff;
     height: 100%;
 }
