--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 html {
-    background: url(../images/bg.jpg) no-repeat center center fixed;
+    background: url(./images/bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -119,4 +119,27 @@ h2 strong.two {
 p.big_text {
     font-size: 27px;
     margin-bottom: 10px;
+}
+ul.contact
+{
+    width: 120px;
+    margin: 80px auto 0;
+    height: 20px;
+    text-align: center;
+}
+
+.clear {
+    clear: both;
+}
+
+ul.contact li{
+    position: relative;
+    height: 20px;
+}
+
+ul.contact li a{
+    display: block;
+    height: 20px;
+    color: white;
+    text-decoration: none;
 }
